[package]
name = "naka"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "naka"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
windows.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

# Compression
flate2 = "1.0"

