[package]
name = "yuubari"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yuubari"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
windows.workspace = true
ntapi.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json = "1.0"

